# pet-autotests

./: README.MD  config.py  conftest.py  dev_settings.toml  prod_settings.toml  pyproject.toml  pytest.ini
src/: utils.py
src/api/: logger.py
src/api/client/: __init__.py  base_client.py  contacts_client.py
src/api/models/: contacts_schemas.py
src/web/page/: base_page.py  mailru_page.py
tests/api/: conftest.py
tests/api/contacts/: test_contacts.py
tests/web/: conftest.py  test_mailru.py
